[gd_scene load_steps=7 format=1]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://mainmenu.gd" type="Script" id=2]
[ext_resource path="res://text.fnt" type="BitmapFont" id=3]
[ext_resource path="res://aye.png" type="Texture" id=4]
[ext_resource path="res://arrrr.png" type="Texture" id=5]
[ext_resource path="res://text_small.fnt" type="BitmapFont" id=6]

[node name="Panel" type="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 20.0
margin/right = 1920.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 3 )
text = "Choose your Side"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 120.0
margin/right = 965.0
margin/bottom = 1080.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/scale = Vector2( 0.955, 0.96 )

[node name="TextureButton1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 955.0
margin/top = 120.0
margin/right = 1910.0
margin/bottom = 1080.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/scale = Vector2( 0.955, 0.96 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1750.0
margin/top = 40.0
margin/right = 1870.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "LoadGame"
flat = false

[node name="Popup" type="Popup" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 193.0
margin/right = 1240.0
margin/bottom = 893.0
popup/exclusive = false

[node name="Panel" type="Panel" parent="Popup"]

visibility/blend_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 700.0

[node name="ScrollContainer" type="ScrollContainer" parent="Popup/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 25.0
margin/right = 475.0
margin/bottom = 575.0
scroll/horizontal = false
scroll/vertical = true

[node name="VBoxContainer" type="VButtonArray" parent="Popup/Panel/ScrollContainer"]

rect/min_size = Vector2( 450, 30 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 450.0
margin/bottom = 30.0
custom_fonts/font_selected = ExtResource( 6 )
custom_fonts/font = ExtResource( 6 )
button/count = 0
button/min_button_size = 40.0
button/align = 1

[node name="Button" type="Button" parent="Popup/Panel"]

visibility/opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 600.0
margin/right = 350.0
margin/bottom = 679.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="Button 2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 120.0
margin/bottom = 67.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="Label 2" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 80.0
margin/right = 352.0
margin/bottom = 101.0
custom_fonts/font = ExtResource( 6 )
text = "Everything: Me (Gerrit Gro√ükopf)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RichTextLabel" type="RichTextLabel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 140.0
margin/right = 615.0
margin/bottom = 300.0
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode/enabled = true
bbcode/bbcode = "Software used:\n- Godot Game Engine (The best engines run open)\n- GIMP (Photoshop without the shop)\n- Mypaint (it\'s mine, cuz it\'s foss)\n- LMMS (can you hear that\? it\'s the Sound of opensource)"
visible_characters = -1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Popup/Panel/Button" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="Button 2" to="." method="_on_Credits_pressed"]


